Project

General

Profile

Actions

Bug #44283

closed

rgw: some list buckets handle leak

Added by Tianshan Qu about 4 years ago. Updated almost 4 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Target version:
% Done:

0%

Source:
Tags:
Backport:
octopus,nautilus
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

some metadata handle didn't release after init in rgw_bucket.
RGWBucketAdminOp::info() and process_stale_instances()


Related issues 2 (0 open2 closed)

Copied to rgw - Backport #45498: octopus: rgw: some list buckets handle leakResolvedNathan CutlerActions
Copied to rgw - Backport #45499: nautilus: rgw: some list buckets handle leakResolvedNathan CutlerActions
Actions #2

Updated by J. Eric Ivancich about 4 years ago

  • Status changed from New to Fix Under Review
  • Assignee set to Tianshan Qu
  • Target version set to v15.0.0
  • Backport set to nautilus,mimic
  • Pull request ID set to 29886
Actions #3

Updated by J. Eric Ivancich about 4 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #4

Updated by Nathan Cutler almost 4 years ago

  • Backport changed from nautilus,mimic to octopus,nautilus
Actions #5

Updated by Nathan Cutler almost 4 years ago

  • Copied to Backport #45498: octopus: rgw: some list buckets handle leak added
Actions #6

Updated by Nathan Cutler almost 4 years ago

  • Copied to Backport #45499: nautilus: rgw: some list buckets handle leak added
Actions #7

Updated by Nathan Cutler almost 4 years ago

  • Status changed from Pending Backport to Resolved

While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".

Actions

Also available in: Atom PDF