rgw: fix some list buckets handle leak

Fixes: https://tracker.ceph.com/issues/44283

Signed-off-by: Tianshan Qu <tianshan@xsky.com>